:sparkles: JPA 연습

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port=8080
 
 logging.level.org.springframework=info
 logging.level.com.ssg=debug
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
